<resources>
    <string name="app_name">Pony Direct</string>
    <string name="version_name">0.05</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Pony Express</string>
    <string name="about_title">About us</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="muletools">MuleTools</string>

    <string name="please_wait">Please wait</string>
    <string name="scan">Scan</string>
    <string name="tx_hex">Transaction hex</string>
    <string name="enter_tx_hex">Enter transaction in hex format</string>
    <string name="broadcast">Broadcast transaction</string>

    <string name="options_telno">SMS relay</string>
    <string name="options_telno2">phone number of SMS relay</string>
    <string name="options_mainnet">MainNet</string>
    <string name="options_mainnet2">Use MainNet for broadcast (uncheck to use TestNet)</string>
    <string name="options_z85">Use Z85 encoding</string>
    <string name="options_z85_2">Save space by encoding transaction bytes in Z85</string>
    <string name="use_intl_format">Use international dialing format. Ex.:\'+447385555555\'</string>

    <string name="permission_alert_dialog_title">Requesting permissions</string>
    <string name="permission_dialog_message">The app will now request your permission to send and read SMS and use camera for scanning QR codes.</string>

    <string name="sending">sending</string>
    <string name="broadcasted">broadcasted</string>
    <string name="sent_sms">sent SMS</string>
    <string name="to">to</string>
    <string name="default_relay">+447490741539</string>

</resources>
